--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "gulp-minimize",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Gulp plugin for HTML minifiy.Based on minimize.",
   "main": "index.js",
+  "homepage": "https://github.com/foru17/gulp-minimize#readme",
+  "bugs": {
+    "url": "https://github.com/foru17/gulp-minimize/issues",
+    "email":"i@luolei.org"
+  },
+  "author": "foru17",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -14,20 +20,23 @@
     "minimize",
     "gulp"
   ],
-  "author": "foru17",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/foru17/gulp-minimize/issues",
-    "email":"i@luolei.org"
-  },
   "_npmUser": {
     "name": "foru17",
-    "email": "meleilei@gmail.com"
+    "email": "i@luolei.org"
   },
-  "homepage": "https://github.com/foru17/gulp-minimize#readme",
   "dependencies": {
     "gulp-util": "^3.0.8",
     "minimize": "^2.1.0",
     "through2": "^2.0.3"
-  }
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2",
+    "should": "^11.2.1"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/foru17/gulp-minimize#license"
+    }
+  ]
 }
